Integrating forgotPassword and resetPassword in eclipse

--- a/todoApp/src/main/webapp/app/login/login.template.html
+++ b/todoApp/src/main/webapp/app/login/login.template.html
@@ -93,7 +93,7 @@
 
             <div class="row" id="bottom-links" style="margin: 2% auto;">
                 <div class="col text-center col-md-auto">
-                    <a href="#">Forgot your password?</a>
+                    <a ui-sref="forgotpassword">Forgot your password?</a>
                 </div>
 
                 <div class="col text-center">
