Making few changes
Aligned the done button to the right of div using flex
Changed the sidenav to reflect full height.
Changed some links to CDN since bower links are giving errors in aria
and messages with incorrect angular version.

--- a/todoApp/src/main/webapp/app/resetpassword/resetpassword.template.html
+++ b/todoApp/src/main/webapp/app/resetpassword/resetpassword.template.html
@@ -1,41 +1,25 @@
-<div class="container justify-content-center col-6" id="maincontainer">
-
-
-    <div class="row">
-
-        <div class="col text-center">
-            <h2 class="form-signin-heading">Enter your new password</h2>
-        </div>
-
-    </div>
-
-
-    <div class="row">
-        <div class="col">
-            <form name="form" class="form-signin" novalidate>
-                <div class="form-group">
-                    <input type="password" name="password" ng-model="user.password" class="form-control" placeholder="Password" ng-model="user.password"
-                        ng-minlength="5" ng-maxlength="10" required />
-                    <div class="has-danger">
-                        <div class="form-control-feedback" ng-show="form.password.$dirty &&  form.password.$error.required">* Required</div>
-                        <div class="form-control-feedback" ng-show="form.password.$dirty &&  form.password.$error.minlength">Password is Too Short!!!</div>
-                        <div class="form-control-feedback" ng-show="form.password.$dirty &&  form.password.$error.maxlength">Password is To Long!!!</div>
+<md-content flex layout="column" layout-align="space-around" layout-padding="layout-padding" ng-cloak="ng-cloak" class="setNewPassword-form">
+        <md-card flex="flex" flex-gt-sm="50" flex-gt-md="33">
+          <md-card-content>
+            <form name="Form">
+                <md-input-container class="md-block">
+                    <label>New Password</label>
+                    <input type="password" name="password" ng-model="user.password" ng-minlength="6" required=""/>
+                    <div ng-messages="Form.password.$error" role="alert" multiple="">
+                      <div ng-message="required" class="my-message">Please enter your password.</div>
+                      <div ng-message="minlength" class="my-message">Your password must be at least 6 characters</div>
                     </div>
-                </div>
-
-                <div class="form-group">
-                    <input type="password" name="confirmpassword" ng-model="user.confirmpassword" class="form-control" placeholder="Retype the password"
-                        ng-model="user.confirmpassword" match-password="password" required />
-                    <div class="has-danger">
-                        <div class="form-control-feedback" ng-show="form.confirmpassword.$dirty &&  form.confirmpassword.$error.required">* Required</div>
-                        <div class="form-control-feedback" ng-show="form.confirmpassword.$dirty &&  form.confirmpassword.$error.passwordMatch">Passwords do not match!
-                        </div>
+                  </md-input-container>
+                  <md-input-container class="md-block">
+                    <label>Confirm Password</label>
+                    <input type="password" name="confirmPassword" ng-model="user.confirmpassword" match-password="password" required="" />
+                    <div ng-messages="Form.confirmPassword.$error" role="alert" multiple="">
+                      <div ng-message="required" class="my-message">Please re-enter your password.</div>
+                      <div ng-message="passwordMatch" class="my-message">Your password is not matching</div>
                     </div>
-                </div>
-
-                <button type="submit" ng-click="reset()" ng-disabled="form.$invalid" class="btn btn-success btn-lg float-right">Reset</button>                                
-
+                    </md-input-container>
+              <md-button ng-disabled="!Form.$valid" ng-click="submit()" class="md-raised md-primary">&nbsp Send &nbsp</md-button>
             </form>
-        </div>
-    </div>
-</div>
+          </md-card-content>
+        </md-card>
+      </md-content>
