Minor Changes in Notes Service Dao and ng-repeat
Shifted date setting logic to service rather than Dao.
Added layout center center to align boxes correctly.

--- a/todoApp/src/main/webapp/app/homepage/homepage.template.html
+++ b/todoApp/src/main/webapp/app/homepage/homepage.template.html
@@ -88,7 +88,7 @@
 			</md-card>
 
 			<div layout=row layout-wrap flex>
-				<div flex="30" layout="column" ng-repeat="note in notes">
+				<div flex="30" layout-align="center center" layout="column" ng-repeat="note in notes">
 
 					<md-card>
 						<md-card-header>
