--- a/todoApp/src/main/webapp/app/homepage/homepage.template.html
+++ b/todoApp/src/main/webapp/app/homepage/homepage.template.html
@@ -88,7 +88,7 @@
 			</md-card>
 
 			<div layout="row" layout-align="start center" layout-wrap flex>
-				<div flex="30" layout="column" ng-repeat="note in notes | filter:{trash:false}" ng-mouseenter="mouse=true" ng-mouseleave="mouse=false">
+				<div flex="30" layout="column" ng-repeat="note in notes | filter:{archive:false}" ng-mouseenter="mouse=true" ng-mouseleave="mouse=false">
 
 					<md-card>
 						<md-card-header>
