Structural Changes at Angular Front End
Adding directives for sidenav and maincard.
Adding submodules sidenav and maincard in homecontroller

--- a/todoApp/src/main/webapp/app/homepage/homepage.template.html
+++ b/todoApp/src/main/webapp/app/homepage/homepage.template.html
@@ -1,91 +1,18 @@
 <div layout="column">
 
-	<md-toolbar layout="row" style="background-color:#f5b400">
-		<md-button class="menu" ng-click="ul.toggleList()" aria-label="Browse Users">
-			<i class="material-icons">menu</i>
-		</md-button>
-		<h3>Fundoo Notes</h3>
-	</md-toolbar>
-
+	<navbar></navbar>
+	
 	<div flex layout="row">
 
 		<!-- SideNav -->
-		<md-sidenav md-is-locked-open="$mdMedia('gt-md')">
-			<md-list>
-
-				<md-list-item>
-					<md-button>
-						<i class="material-icons">lightbulb_outline</i> Notes </md-button>
-				</md-list-item>
-				<md-list-item>
-					<md-button>
-						<i class="material-icons">touch_app</i>Reminder
-					</md-button>
-				</md-list-item>
-				<md-list-item>
-					<md-button>
-						<i class="material-icons">label_outline</i> Label </md-button>
-				</md-list-item>
-				<md-list-item>
-					<md-button>
-						<i class="material-icons">archive</i> Archive
-					</md-button>
-				</md-list-item>
-				<md-list-item>
-					<md-button>
-						<i class="material-icons">delete</i>Trash </md-button>
-				</md-list-item>
-			</md-list>
-		</md-sidenav>
+		<sidenav></sidenav>
 
 		<md-content flex layout-padding="layout-padding" layout="column" layout-align="center center">
 
 
 
 			<!-- Main Card -->
-			<md-card id="maincard">
-
-				<md-card-header ng-show="fullNote">
-					<md-card-header-text>
-						<div class="noteContent md-title" id="mainNoteTitle" ng-bind-html="newNote.title" contenteditable="true" contenteditabledata
-						    aria-multiline="true" placeholder="Title">
-						</div>
-					</md-card-header-text>
-				</md-card-header>
-
-				<md-card-content>
-					<div class="noteContent" id="mainNoteDescription" ng-click="showFullNote()" ng-bind-html="newNote.description" contenteditable="true"
-					    contenteditabledata aria-multiline="true" placeholder="Description"></div>
-				</md-card-content>
-
-				<md-card-actions layout="row" layout-align="center center" ng-show="fullNote">
-					<div flex="80">
-						<md-button class="md-icon-button" aria-label="Remind Me">
-							<i class="material-icons">touch_app</i>
-						</md-button>
-						<md-button class="md-icon-button" aria-label="Collaborate">
-							<i class="material-icons">person_add</i>
-						</md-button>
-						<md-button class="md-icon-button" aria-label="Color Palette">
-							<i class="material-icons">color_lens</i>
-						</md-button>
-						<md-button class="md-icon-button" aria-label="Color Palette">
-							<i class="material-icons">image</i>
-						</md-button>
-						<md-button class="md-icon-button" aria-label="Archive">
-							<i class="material-icons">archive</i>
-						</md-button>
-						<md-button class="md-icon-button" aria-label="Archive">
-							<i class="material-icons">more_vert</i>
-						</md-button>
-					</div>
-
-					<div flex="20">
-						<md-button class="md-button done" ng-click="createNote()" aria-label="Archive"> DONE </md-button>
-					</div>
-
-				</md-card-actions>
-			</md-card>
+			<maincard></maincard>
 
 			<div layout="row" layout-align="start center" layout-wrap flex>
 				<div flex="30" layout="column" ng-repeat="note in notes | filter:{archive:false}" ng-mouseenter="mouse=true" ng-mouseleave="mouse=false">
