--- a/todoApp/src/main/webapp/app/homepage/homepage.template.html
+++ b/todoApp/src/main/webapp/app/homepage/homepage.template.html
@@ -15,63 +15,8 @@
 			<maincard></maincard>
 
 			<div layout="row" layout-align="start center" layout-wrap flex>
-				<div flex="30" layout="column" ng-repeat="note in notes | filter:{archive:false}" ng-mouseenter="mouse=true" ng-mouseleave="mouse=false">
-
-					<md-card>
-						<md-card-header>
-							<md-card-header-text>
-								<span class="md-title">{{note.title}}</span>
-							</md-card-header-text>
-						</md-card-header>
-						<md-card-content>
-							{{note.description}}
-							</p>
-						</md-card-content>
-						<md-card-actions layout="row" layout-align="start center" flex>
-							<md-card-icon-actions>
-								<md-button class="md-icon-button" aria-label="Remind Me">
-									<i class="material-icons" ng-show="mouse">touch_app</i>
-								</md-button>
-								<md-button class="md-icon-button" aria-label="Collaborate">
-									<i class="material-icons" ng-show="mouse">person_add</i>
-								</md-button>
-								<md-button class="md-icon-button" aria-label="Color Palette">
-									<i class="material-icons" ng-show="mouse">color_lens</i>
-								</md-button>
-								<md-button class="md-icon-button" aria-label="Color Palette">
-									<i class="material-icons" ng-show="mouse">image</i>
-								</md-button>
-								<md-button class="md-icon-button" ng-click="archive(note)" aria-label="Archive">
-									<i class="material-icons" ng-show="mouse">archive</i>
-								</md-button>
-
-								<md-menu>
-									<md-button class="md-icon-button" aria-label="Open menu with custom trigger" ng-click="$mdOpenMenu()">
-										<i class="material-icons" ng-show="mouse">more_vert</i>
-									</md-button>
-
-									<md-menu-content>
-										<md-menu-item>
-											<md-button class="md-button" ng-click="trash(note)" aria-label="Delete">
-												Delete
-											</md-button>
-										</md-menu-item>
-										<md-menu-item>
-											<md-button class="md-button" ng-click="addLabel(note)" aria-label="Add Label">
-												Add Label
-											</md-button>
-										</md-menu-item>
-										<md-menu-item>
-											<md-button class="md-button" ng-click="copyNote(note)" aria-label="Make a Copy">
-												Make a copy
-											</md-button>
-										</md-menu-item>
-									</md-menu-content>
-								</md-menu>
-
-							</md-card-icon-actions>
-					</md-card>
-				</div>
+				
+				<noteslist></noteslist>
 
 			</div>
 		</md-content>
