Social Login and Partial Profile Pic
Social login with both front end and backend complete
Profile pic url stored as blob.

--- a/todoApp/src/main/webapp/app/login/login.template.html
+++ b/todoApp/src/main/webapp/app/login/login.template.html
@@ -27,10 +27,10 @@
           </div>
           <br><br>
           <div layout="column" >
-            <a href="/auth/facebook">
+            <a href="loginWithFacebook">
               <md-button style="width: -webkit-fill-available;" class="md-raised md-primary">&nbsp Facebook  &nbsp</md-button>
             </a>
-            <a href="/auth/google">
+            <a href="loginWithGoogle">
               <md-button style="width: -webkit-fill-available;" class="md-raised md-warn">&nbsp Google &nbsp</md-button>
             </a>
           </div>
