--- a/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.template.html
+++ b/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.template.html
@@ -93,8 +93,14 @@
                     <span class="md-title" ng-bind-html="note.title"></span>
                 </md-card-header-text>
             </md-card-header>
+
             <md-card-content ng-bind-html="note.description">
             </md-card-content>
+
+            <md-card-content ng-if("note.reminder")>
+                    {{note.reminder | date:'medium'}}
+            </md-card-content>
+            
             <md-card-actions layout="row" layout-align="start center" flex>
                 <md-button class="md-icon-button" aria-label="Remind Me" ng-click="displayDialog(note)">
                     <i class="material-icons" ng-show="mouse">touch_app</i>
