Fixing many design issues
Making card's min width to fixed size.
Removing double vertical scrollbars.
Adding ng-cloak to hide raw angularjs code like dummy controller page
and choose image.
Have to fix Main card alignment in center.

--- a/todoApp/src/main/webapp/app/homepage/homepage.template.1.html
+++ b/todoApp/src/main/webapp/app/homepage/homepage.template.1.html
@@ -97,8 +97,7 @@
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							{{note.description}}
-							</p>
+							{{note.description}}							
 						</md-card-content>
 						<md-card-actions layout="row" layout-align="start center" flex>
 							<md-card-icon-actions>
@@ -142,7 +141,9 @@
 									</md-menu-content>
 								</md-menu>
 
-							</md-card-icon-actions>
+								</md-card-icon-actions>
+
+							</md-card-actions>
 					</md-card>
 				</div>
 
