--- a/todoApp/src/main/webapp/app/homepage/homepage.template.html
+++ b/todoApp/src/main/webapp/app/homepage/homepage.template.html
@@ -1,22 +1,22 @@
 <div layout="column">
 
 	<navbar></navbar>
-	
+
 	<div flex layout="row">
 
 		<!-- SideNav -->
 		<sidenav></sidenav>
 
-		<md-content flex layout-padding="layout-padding" layout="column" layout-align="center center">
+		<md-content class="notespane" flex layout-padding="layout-padding" layout="column">
 
 
-
-			<!-- Main Card -->
-			<maincard></maincard>
+			
+				<!-- Main Card -->
+				<maincard></maincard>			
 
 			<!-- <div ui-view="Pinned"></div> -->
-			<div layout="row" layout-align="start center" layout-wrap flex>
-				
+			<div layout="column" layout-align="start center" layout-wrap flex>
+
 				<noteslist></noteslist>
 				<!-- <div ui-view="TodoList"></div> -->
 				<!-- <ui-view></ui-view> -->
