Adding parsing and saving LinkMetada
Adding metadata fields to NoteLink entity.
Adding Jsoup parsing of link.
Saving image, title and thumbnail image to db.

--- a/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.template.html
+++ b/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.template.html
@@ -107,7 +107,8 @@
                 </md-card-header-text>
             </md-card-header>
 
-            <md-card-content ng-bind-html="note.description">
+            <md-card-content>
+            <div ng-bind-html="note.description"></div>
             </md-card-content>
 
             <md-card-content ng-if( "note.reminder")>
